2014-03-06  Eric Wolf  <wolf@Talisman>

	* Version 0.2
	* Finally a dot release increment.
	* The client side templating system is complete, though more debugging is certainly needed.
	* The next huge thing to do is to write the documents.

2014-02-26  Eric Wolf  <wolf@Talisman>

	* Version 0.1023
	* fixed bug in mongo db list_insert
	* updated tests
	* added sort example to templte testy.html page
	* implemented reverse is wrapped list sort

2014-02-17  Eric Wolf  <wolf@Talisman>

	* Version 0.1022
	* added wrap_list method to javascript yote object. This returns an object that paginates a wholly loaded list.
	* refactored button_actions to create and return a manager object.
	* added allowable return headers for javascript.
	* changed requests from GET to POST due to size of request reasons.
	* fixed bug where request sockets were not being handled properly.
	* added search and sort to template pagination via a list wrapper object (from yote obj)

2014-02-07  Eric Wolf  <wolf@Talisman>

	* Version 0.1021
	* fixed bug in edit field

2014-01-14  Eric Wolf  <wolf@Talisman>

	* Version 0.1020
	* reset password link activation also validates email
	* fixed bug in client side pagination
	* after_new_fun javascript function also takes data hash as an argument.
	* new element designation in columns : ~ indicates just html to follow
	* $$ item..the item in question
	* new client server side templating

2014-01-06  Eric Wolf  <wolf@Talisman>

	* Version 0.1019
	* Mongo db tries 3 reconnects if it errors out connecting to mongo
	* wrap cron actions in eval so it doesn't crash the server.
	* added $.yote.util.refresh_ui function
	* added _account_handles in Yote::AppRoot
	* fixed bug in Yote::UserObj permissions.

2014-01-02  Eric Wolf  <wolf@Talisman>

	* Version 0.1018
	* fixed bug in yote_panel refresh

	* Version 0.1017
	* added Yote::Account::new_user_obj