@@ -1,5 +1,11 @@
 The stack :
 
+ update tests to test for 4 pagination types : list direct, list with host, hash direct, hash with host
+
+  need to implement hash key search in server
+  
+  test if mysql queries too big ( fixed in sqlite )
+
  SCRIPT TAG : id registers self <SCRIPT type="text/template" id="template_name">...</script>
 
  template for hashes ( like <@ for lists... <%  )
