@@ -295,12 +295,16 @@ sub _stow_now {
 	$self->_do( @$upd );
 	die $self->{DBH}->errstr() if $self->{DBH}->errstr();
     }
-    my $first_data = shift @$udata;
-    if( $first_data ) {
-	$self->_do( qq~INSERT INTO field
+    while( @$udata ) {
+	my( $first_data, @chunk );
+	( $first_data, @chunk[0..200], @$udata ) = @$udata;
+	(@chunk) = (grep { $_ } @chunk);
+	if( $first_data ) {
+	    $self->_do( qq~INSERT INTO field
                        SELECT ? AS obj_id, ? AS field, ? as ref_id, ? as value ~.
-		    join( ' ', map { ' UNION SELECT ?, ?, ?, ? ' } @$udata ),
-		    map { @$_ } $first_data, @$udata );
+			join( ' ', map { ' UNION SELECT ?, ?, ?, ? ' } @chunk ),
+			map { @$_ } $first_data, @chunk );
+	}
     }
 } #_stow_now
 
@@ -348,12 +352,16 @@ sub _engage_queries {
 	    $self->_do( @$upd );
 	    die $self->{DBH}->errstr() if $self->{DBH}->errstr();
 	}
-	my $first_data = shift @$udata;
-	if( $first_data ) {
-	    $self->_do( qq~INSERT INTO field
+	while( @$udata ) {
+	    my( $first_data, @chunk );
+	    ( $first_data, @chunk[0..200], @$udata ) = @$udata;
+	    (@chunk) = (grep { $_ } @chunk);
+	    if( $first_data ) {
+		$self->_do( qq~INSERT INTO field
                        SELECT ? AS obj_id, ? AS field, ? as ref_id, ? as value ~.
-			join( ' ', map { ' UNION SELECT ?, ?, ?, ? ' } @$udata ),
-			map { @$_ } $first_data, @$udata );
+			    join( ' ', map { ' UNION SELECT ?, ?, ?, ? ' } @chunk ),
+			    map { @$_ } $first_data, @chunk );
+	    }
 	}
     }
 } #_engage_queries
