@@ -94,7 +94,7 @@ $().ready(function(){
         $.yote.logout();
         $.yote.debug = false;
 
-	try {
+//	try {
             //fetch app that doesn't require login and get scalar
             step('get app testappnologin');
             var nologin = $.yote.fetch_app( 'Yote::Test::TestAppNoLogin' );
@@ -328,6 +328,68 @@ $().ready(function(){
 	    }
 	    is( rounds, 3, "took 3 rounds of 10 to go through the alphabet" );
 	    ok( pag_ok, "all letters are present and there are no extra ones" );
+
+
+	    pag = hello_app.wrap_list( { collection_name : '_foo_array', size : 5 } );
+
+	    var pag_list = pag.to_list();
+
+	    is( pag.full_size(), 26, "26 letters of the alphabet" );
+	    is( pag.get( 0 ), "A", "first letter" );
+	    is( pag_list[ 0 ], "A", "first letter output list" );
+	    is( pag.page_size, 5, "Size of 5" );
+	    is( pag_list.length, 5, "output list has 5" );
+	    is( pag.get( 4 ), "E", "fifth letter" );
+	    is( pag_list[ 4 ], "E", "fifth letter output list" );
+	    pag.forwards();
+	    pag_list = pag.to_list();
+	    is( pag_list[ 0 ], "F", "first letter output list after forward" );
+	    is( pag.get( 0 ), "F", " first after forward" );
+	    is( pag.get( 4 ), "J", " fifth after forward" );
+	    is( pag_list[ 4 ], "J", "fifth letter output list after forward" );
+	    pag.seek( 22 );
+	    pag_list = pag.to_list();
+	    is( pag_list[ 0 ], "W", "output list; starting at w" );
+	    is( pag.get( 0 ), "W", "Starting at w" );
+	    is( pag.get( 3 ), "Z", "Ending with Z" );
+	    is( pag_list[ 3 ], "Z", "output list; ending with Z" );
+	    pag.last();
+	    pag_list = pag.to_list();
+	    is( pag_list[ 4 ], "Z", "output list; Z is last" );
+	    is( pag.get( 4 ), "Z", "Z is last" );
+	    is( pag.get( 0 ), "V", "start with V" );
+	    is( pag_list[ 0 ], "V", "output list after last, start with V" );
+	    pag.back();
+	    pag_list = pag.to_list();
+	    is( pag_list[ 0 ], "Q", "output list after last, start with Q" );
+	    is( pag.get( 0 ), "Q", "Q is for Rewind" );
+	    is( pag.get( 4 ), "U", "U is for U Rewind" );
+	    pag.first();
+	    is( pag.get( 0 ), "A", "Back to A" );
+	    is( pag.get( 4 ), "E", "Back to E" );
+
+	    var bar_hash = hello_app.get_bar_hash().to_hash();
+	    var hpag = hello_app.hash_paginator( 'bar_hash', 10 );
+	    is( hpag.full_size, 26, "26 letters of the alphabet" );
+	    is( hpag.page_size, 10, "Page Size of 10" );
+	    is( hpag.page_count(), 10, "10 in buffer" );
+
+	    //go through them all and see if there is a-z but no more than that.
+	    var pag_ok = true;
+	    var rounds = 0;
+	    while( pag_ok && hpag.can_fast_forward() ) {
+		if( rounds > 0 ) {hpag.fast_forward(); }
+		for( var k in hpag.contents ) {
+		    bar_hash[ k ]++;
+		    pag_ok = pag_ok && bar_hash[ k ] == 2;
+		}
+		++rounds;
+	    }
+	    for( var k in bar_hash ) {
+		pag_ok = pag_ok && bar_hash[ k ] == 2;
+	    }
+	    is( rounds, 3, "took 3 rounds of 10 to go through the alphabet" );
+	    ok( pag_ok, "all letters are present and there are no extra ones" );
 	    
 
 	    pag = hello_app.wrap_hash( { collection_name : 'foo_hash', size : 5 } );
@@ -338,7 +400,6 @@ $().ready(function(){
 	    // 0 1 10 11 12   13 14 15 16 17   18 19  2 20 21   22 23 24 25   3 4  5 6 7   8 9
             // 0   * seek 2                                                          22 seek
 
-	    console.log( [pag_keys,pag_hash,'start'] );
 	    is( pag.full_size(), 26, "26 letters of the alphabet" );
 	    is( pag_hash[ pag_keys[ 0 ] ], "A", "first letter" );
 	    is( pag_keys[ 0 ], '0', "first index at start" );
@@ -356,7 +417,6 @@ $().ready(function(){
 	    pag_hash = pag.to_hash();
 	    pag_keys = Object.keys( pag_hash );
 	    pag_keys.sort();
-	    console.log( [pag_keys,pag_hash,'after seek'] );
 	    is( pag_hash[ pag_keys[ 0 ] ], "K", "small seek k start" );
 	    is( pag_hash[ pag_keys[ 4 ] ], "O", "small seek o end" );
 
@@ -365,7 +425,6 @@ $().ready(function(){
 	    pag_hash = pag.to_hash();
 	    pag_keys = Object.keys( pag_hash );
 	    pag_keys.sort();
-	    console.log( [pag_keys,pag_hash,'after seek'] );
 	    is( pag_hash[ pag_keys[ 0 ] ], "G", "big seek Starting at G" );
 	    is( pag_hash[ pag_keys[ 3 ] ], "J", "big seek Ending with J" );
 	    is( pag_keys.length, 4, "keys length after seek" );
@@ -374,7 +433,6 @@ $().ready(function(){
 	    pag_keys = Object.keys( pag_hash );
 	    pag_keys.sort();
 
-	    console.log( [pag_keys,pag_hash,'after last'] );
 	    is( pag_hash[ pag_keys[ 4 ] ], "J", "J is last" );
 	    is( pag_hash[ pag_keys[ 0 ] ], "F", "last start with F" );
 	    pag.back();
@@ -392,11 +450,103 @@ $().ready(function(){
 	    is( pag_hash[ pag_keys[ 0 ] ], "A", "Back to A" );
 	    is( pag_hash[ pag_keys[ 4 ] ], "M", "Back to M" );
 
+	    // check to see if hash search function works. Search for all 3 keys :
+	    //   13 : N, 23 : X, 3 : D
+		$.yote.debug = true;
+	    pag.set_hashkey_search_criteria( '3' );
+	    pag_hash = pag.to_hash();
+	    pag_keys = Object.keys( pag_hash );
+	    pag_keys.sort();
+		$.yote.debug = false;
+	    is( pag_keys.length, 3, '3 pag keys matching the string 3' );
+	    is( pag_hash[ pag_keys[ 0 ] ], "N", "first matched 3 key" );
+	    is( pag_hash[ pag_keys[ 1 ] ], "X", "second matched 3 key" );
+	    is( pag_hash[ pag_keys[ 2 ] ], "D", "third matched 3 key" );
+	
+	    pag = hello_app.wrap_hash( { collection_name : '_foo_hash', size : 5 } );
+	    pag_hash = pag.to_hash();
+	    pag_keys = Object.keys( pag_hash );
+	    pag_keys.sort();
+
+	    // A B  K L   M    N  O  P  Q  R    S  T  C  U  V    W  X  Y  Z   D E  F G H   I J
+	    // 0 1 10 11 12   13 14 15 16 17   18 19  2 20 21   22 23 24 25   3 4  5 6 7   8 9
+            // 0   * seek 2                                                          22 seek
+
+	    is( pag.full_size(), 26, "26 letters of the alphabet" );
+	    is( pag_hash[ pag_keys[ 0 ] ], "A", "first letter" );
+	    is( pag_keys[ 0 ], '0', "first index at start" );
+	    is( pag.page_size, 5, "Size of 5" );
+	    is( pag_hash[ pag_keys[ 4 ] ], "M", "fifth letter" );
+	    pag.forwards();
+	    pag_hash = pag.to_hash();
+	    pag_keys = Object.keys( pag_hash );
+	    pag_keys.sort();
+
+	    is( pag_hash[ pag_keys[ 0 ] ], "N", " first after forward" );
+	    is( pag_hash[ pag_keys[ 4 ] ], "R", " last after forward" );
+
+	    pag.seek( 2 );
+	    pag_hash = pag.to_hash();
+	    pag_keys = Object.keys( pag_hash );
+	    pag_keys.sort();
+
+	    is( pag_hash[ pag_keys[ 0 ] ], "K", "small seek k start" );
+	    is( pag_hash[ pag_keys[ 4 ] ], "O", "small seek o end" );
+
+
+	    pag.seek( 22 );
+	    pag_hash = pag.to_hash();
+	    pag_keys = Object.keys( pag_hash );
+	    pag_keys.sort();
+
+	    is( pag_hash[ pag_keys[ 0 ] ], "G", "big seek Starting at G" );
+	    is( pag_hash[ pag_keys[ 3 ] ], "J", "big seek Ending with J" );
+	    is( pag_keys.length, 4, "keys length after seek" );
+	    pag.last();
+	    pag_hash = pag.to_hash();
+	    pag_keys = Object.keys( pag_hash );
+	    pag_keys.sort();
+
+	    is( pag_hash[ pag_keys[ 4 ] ], "J", "J is last" );
+	    is( pag_hash[ pag_keys[ 0 ] ], "F", "last start with F" );
+	    pag.back();
+	    pag_hash = pag.to_hash();
+	    pag_keys = Object.keys( pag_hash );
+	    pag_keys.sort();
+
+	    is( pag_hash[ pag_keys[ 0 ] ], "X", "X is for Rewind first" );
+	    is( pag_hash[ pag_keys[ 4 ] ], "E", "E is for Rewind last" );
+	    pag.first();
+	    pag_hash = pag.to_hash();
+	    pag_keys = Object.keys( pag_hash );
+	    pag_keys.sort();
+
+	    is( pag_hash[ pag_keys[ 0 ] ], "A", "Back to A" );
+	    is( pag_hash[ pag_keys[ 4 ] ], "M", "Back to M" );
+
+	    // check to see if hash search function works. Search for all 3 keys :
+	    //   13 : N, 23 : X, 3 : D
+		$.yote.debug = true;
+
+	    pag.set_hashkey_search_criteria( '3' );
+	    pag_hash = pag.to_hash();
+	    pag_keys = Object.keys( pag_hash );
+	console.log( [ 'pag hash', pag_hash, pag_keys] );
+		$.yote.debug = false;
+
+	    pag_keys.sort();
+	    is( pag_keys.length, 3, '3 pag keys matching the string 3' );
+	    is( pag_hash[ pag_keys[ 0 ] ], "N", "first matched 3 key" );
+	    is( pag_hash[ pag_keys[ 1 ] ], "X", "second matched 3 key" );
+	    is( pag_hash[ pag_keys[ 2 ] ], "D", "third matched 3 key" );
+
 	    var bar_hash = hello_app.get_bar_hash().to_hash();
 	    var hpag = hello_app.hash_paginator( 'bar_hash', 10 );
 	    is( hpag.full_size, 26, "26 letters of the alphabet" );
 	    is( hpag.page_size, 10, "Page Size of 10" );
 	    is( hpag.page_count(), 10, "10 in buffer" );
+	    
+	    
 
 	    //go through them all and see if there is a-z but no more than that.
 	    var pag_ok = true;
@@ -431,11 +581,13 @@ $().ready(function(){
 	    login.short_time( '', function( pass_resp ) { pass( "Passed short time test" )(); meets() }, function( fail_resp ) { fail( "Failed short time test" )(); meets(); }, true );
 	    login.short_time( '', function( pass_resp ) { pass( "Passed second short time test" )(); meets() }, function( fail_resp ) { fail( "Failed second short time test" )(); meets(); }, true );
 	    login.short_time( '', function( pass_resp ) { pass( "Passed third short time test" )(); meets() }, function( fail_resp ) { fail( "Failed third short time test" )(); meets(); }, true );
+/*
 	}
 	catch( err ) {
 	    fail( err )();
 	    wrap_up();
 	}
+*/
     } //do_tests
 
     do_tests();
